--- a/TODO
+++ b/TODO
@@ -1,3 +1,10 @@
+Translations
+Routes
+REMOVE class selection you have the branded
+limit bags per PER LEG
+upsales in routes
+
+
 Lounge access per airport hours per paxes
 
 Branded Faress only if econoym selegected in all segments of a leg
@@ -10,7 +17,6 @@ bug fixes in price display in each upsale component
 price calculation in reducers
 
 
-limit bags per PER LEG
 
 show farebasis and class in segments
 
