--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -6,19 +6,25 @@
     "Stops": "Stops",
     "Duration": "Dauer",
     "WaitTime": "Wartezeit",
-    "Segment": "Segment"
+    "Segment": "Segment",    
+    "OperatedBy" : "Operated by"
   },
   "pay" : {
     "CreditCard" : "Kreditkarte",
     "Details": "Zahlungsdaten",
     "Receipt" : "Quittung",
-    "Invoice" : "Rechnung"
+    "Invoice" : "Rechnung",
+    "Bank" :"Bank",
+    "CardHolder" :"Card holder",
+    "CardNumber": "Card number"
   },
   "general": {
     "Toggle": "Umschalten",
     "Cost": "Kosten",
     "Expand": "Erweitern",
-    "Contact" : "Kontaktdaten"
+    "Contact" : "Kontaktdaten",
+    "Select" :"Select",
+    "Clear" : "Clear"
   },
   "passengers": {
     "AddPassenger": "Passagier hinzufügen",
@@ -29,26 +35,38 @@
     "Child": "Kind",
     "Infant": "Baby",
     "SelectGender": "Wählen Sie das Geschlecht aus",
+    "SelectAge": "Select Age",
     "Name": "Name",
-    "Surname": "Nachname"
+    "Surname": "Nachname",
+    "Male" : "Male",
+    "Female" : "Female",
+    "Mobile" :"Mobile",
+    "Address": "Address",
+    "ZIP" :"Post code",
+    "City" :"City"
   },
+  "invoice" :{
+    "Company" :"Company",
+    "Profession" : "Profession",
+    "VAT" : "VAT",
+    "Country":"Country",
+    "Phone" :"Phone"
+},
   "upsales": {
     "PurchaseBags": "Taschen kaufen",
     "upsales": "Kauf Upsales für deine Reise!",
     "SelectInsurance": "Wählen Sie eine Versicherung aus",
     "Hungry": "Haben Sie Hunger?",
     "Main": "Hauptgericht",
-    "Dessert": "Dessert"
+    "Dessert": "Dessert",    
+    "BRB":"Blue Ribbon Bag Insurance!",
+    "Flex" :"Flexible Ticket",
+    "AirHelp" :"Flight Delay Compensation",
+    "FastTrack" : "Fast Track Priority Queue in Security Check",
+    "Parking" : "Parking",
+    "Lounge":"Lounge Access"
   },
-  "cabins": {
-    "SelectCabinPerSegment": "Wählen Sie Ihre Kabine aus",
-    "OneType": "Es steht nur eine Kabine zur Verfügung."
-  },
-  "miles": {
-    "HaveMilesCard": "Haben Sie eine Meilenkarte?",
-    "MilesCard": "Meilenkarte"
-  },
-  "passport": {
+   "passport": {
     "nationality": "Staatsangehörigkeit",
     "issue": "Ausstellungsland",
     "passportNo": "Reisepass No",
@@ -59,18 +77,17 @@
     "Yes": "Ja",
     "No": "Nein"
   },
-  "preseat": {
-    "SelectYourSeats": "Wählen Sie Ihre Plätze aus",
-    "Reset": "Löschen",
-    "Seat": "Platz",
-    "PickSeat": "Wählen Sie einen Platz"
-  },
   "pricebox": {
     "PriceAnalysis": "",
     "TicketPrice": "Fahrkartenpreis",
     "UpsalePrices": "Upsale Preises",
     "Total": "Gesamtpreis",
+    "Fare": "Fare",
+    "Tax": "Tax",
+    "Type": "Type",
+    "Route": "Route",
     "ChangeLang": "Sprache ändern",
-    "ChangeCur": "Währung ändern"
+    "ChangeCur": "Währung ändern",
+    "Checkout" : "Checkout"
   }
 }
