--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -1,75 +1,92 @@
 {
-    "flight": {
-      "Departure": "Departure",
-      "Return": "Return",
-      "YourTrip": "Your trip",
-      "Stops": "Stops",
-      "Duration": "Duration",
-      "WaitTime": "Waiting time",
-      "Segment": "Segment"
-    },
-    "pay" : {
-      "CreditCard" : "Credit Card",
-      "Details": "Payment Details",
-      "Receipt" : "Receipt",
-      "Invoice" : "Invoice"
-    },
-    "general": {
-      "Toggle": "Toggle",
-      "Cost": "Cost",
-      "Expand": "Expand",
-      "Contact" : "Contact Details"
-    },
-    "passengers": {
-      "AddPassenger": "Add Passenger",
-      "RemovePassenger": "Remove this passenger",
-      "FillThePassengerData": "Fyll ut passasjerdataene",
-      "Passenger": "Passenger",
-      "Adult": "Adult",
-      "Child": "Child",
-      "Infant": "Infant",
-      "SelectGender": "Select Gender",
-      "Name": "Name",
-      "Surname": "Surname"
-    },
-    "upsales": {
-      "PurchaseBags": "Kjøp poser",
-      "SelectInsurance": "Select an insurance",
-      "Hungry": "Are you hungry?",
-      "Main": "Main",
-      "Dessert": "Dessert"
-    },
-    "cabins": {
-      "SelectCabinPerSegment": "Select your cabin",
-      "OneType": "Only one cabin is available for this segment."
-    },
-    "miles": {
-      "HaveMilesCard": "Have you got miles card?",
-      "MilesCard": "Miles Card"
-    },
-    "passport": {
-      "nationality": "Nationality",
-      "issue": "Issue Country",
-      "passportNo": "Passport No",
-      "expireDate": "Expiration date",
-      "dob": "Date of birth"
-    },
-  "branded": {
-    "Yes": "Ja",
-    "No": "Nej"
+  "flight": {
+    "Departure": "Departure",
+    "Return": "Return",
+    "YourTrip": "Your trip",
+    "Stops": "Stops",
+    "Duration": "Duration",
+    "WaitTime": "Waiting time",
+    "Segment": "Segment",
+    "OperatedBy" : "Operated by"
   },
-    "preseat": {
-      "SelectYourSeats": "Select your seats",
-      "Reset": "Clear all",
-      "Seat": "Seat",
-      "PickSeat": "Pick a seat"
-    },
-    "pricebox": {
-      "PriceAnalysis": "",
-      "TicketPrice": "Tickets price",
-      "UpsalePrices": "Upsale prices",
-      "Total": "Total price",
-      "ChangeLang": "Change Language",
-      "ChangeCur": "Change Currency"
-    }
-  }
+  "pay" : {
+    "CreditCard" : "Credit Card",
+    "Details": "Payment Details",
+    "Receipt" : "Receipt",
+    "Invoice" : "Invoice",
+    "Bank" :"Bank",
+    "CardHolder" :"Card holder",
+    "CardNumber": "Card number"
+  },
+  "general": {
+    "Toggle": "Toggle",
+    "Cost": "Cost",
+    "Expand": "Expand",
+    "Contact" : "Contact Details",
+    "Select" :"Select",
+    "Clear" : "Clear"
+  },
+  "passengers": {
+    "AddPassenger": "Add Passenger",
+    "RemovePassenger": "Remove this passenger",
+    "FillThePassengerData": "Fyll ut passasjerdataene",
+    "Passenger": "Passenger",
+    "Adult": "Adult",
+    "Child": "Child",
+    "Infant": "Infant",
+    "SelectGender": "Select Gender",
+  "SelectAge": "Select Age",
+    "Name": "Name",
+    "Surname": "Surname",
+    "Male" : "Male",
+    "Female" : "Female",
+    "Mobile" :"Mobile",
+    "Address": "Address",
+    "ZIP" :"Post code",
+    "City" :"City"
+  },
+"invoice" :{
+    "Company" :"Company",
+    "Profession" : "Profession",
+    "VAT" : "VAT",
+    "Country":"Country",
+    "Phone" :"Phone"
+},
+  "upsales": {
+    "PurchaseBags": "Kjøp poser",
+    "SelectInsurance": "Select an insurance",
+    "Hungry": "Are you hungry?",
+    "Main": "Main",
+    "Dessert": "Dessert",
+    "BRB":"Blue Ribbon Bag Insurance!",
+    "Flex" :"Flexible Ticket",
+    "AirHelp" :"Flight Delay Compensation",
+    "FastTrack" : "Fast Track Priority Queue in Security Check",
+    "Parking" : "Parking",
+    "Lounge":"Lounge Access"
+  },
+  "passport": {
+    "nationality": "Nationality",
+    "issue": "Issue Country",
+    "passportNo": "Passport No",
+    "expireDate": "Expiration date",
+    "dob": "Date of birth"
+  },
+"branded": {
+  "Yes": "Ja",
+  "No": "Nej"
+},
+"pricebox": {
+  "PriceAnalysis": "Price Analysis",
+  "TicketPrice": "Tickets price",
+  "UpsalePrices": "Upsale prices",
+  "Total": "Total",
+  "Fare": "Fare",
+  "Tax": "Tax",
+  "Type": "Type",
+  "Route": "Route",
+  "ChangeLang": "Change Language",
+  "ChangeCur": "Change Currency",
+  "Checkout" : "Checkout"
+}
+}
