--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -1,92 +1,91 @@
 {
   "flight": {
-    "Departure": "Departure",
-    "Return": "Return",
-    "YourTrip": "Your trip",
-    "Stops": "Stops",
-    "Duration": "Duration",
-    "WaitTime": "Waiting time",
-    "Segment": "Segment",
-    "OperatedBy" : "Operated by"
+    "Departure": "Avresa",
+    "Return": "Retur",
+    "YourTrip": "Din resa",
+    "Stops": "Stoppar",
+    "Duration": "Varaktighet",
+    "WaitTime": "Väntetid",
+    "Segment": "Segmentet",
+    "OperatedBy" : "Drivs av "
   },
   "pay" : {
-    "CreditCard" : "Credit Card",
-    "Details": "Payment Details",
-    "Receipt" : "Receipt",
-    "Invoice" : "Invoice",
+    "CreditCard" : "Kreditkort",
+    "Details": "Betalningsinformation",
+    "Receipt" : "Mottagande",
+    "Invoice" : "Fakturera",
     "Bank" :"Bank",
-    "CardHolder" :"Card holder",
-    "CardNumber": "Card number"
+    "CardHolder" :"Korthållare",
+    "CardNumber": "Kortnummer"
   },
   "general": {
-    "Toggle": "Toggle",
-    "Cost": "Cost",
-    "Expand": "Expand",
-    "Contact" : "Contact Details",
-    "Select" :"Select",
-    "Clear" : "Clear"
+    "Toggle": "Växla",
+    "Cost": "Kosta",
+    "Expand": "Bygga ut",
+    "Contact" : "Kontaktuppgifter",
+    "Select" :"Välj",
+    "Clear" : "Radera"
   },
   "passengers": {
-    "AddPassenger": "Add Passenger",
-    "RemovePassenger": "Remove this passenger",
+    "AddPassenger": "Lägg till passagerare",
+    "RemovePassenger": "Ta bort passageraren",
     "FillThePassengerData": "Fyll ut passasjerdataene",
-    "Passenger": "Passenger",
-    "Adult": "Adult",
-    "Child": "Child",
-    "Infant": "Infant",
-    "SelectGender": "Select Gender",
-  "SelectAge": "Select Age",
-    "Name": "Name",
-    "Surname": "Surname",
-    "Male" : "Male",
-    "Female" : "Female",
-    "Mobile" :"Mobile",
+    "Passenger": "Passagerare",
+    "Adult": "Vuxen",
+    "Child": "Barn",
+    "Infant": "Spädbarn",
+    "SelectGender": "Kön",
+  "SelectAge": "Ålder",
+    "Name": "Namn",
+    "Surname": "Efternamn",
+    "Male" : "Manlig",
+    "Female" : "Kvinna",
+    "Mobile" :"Mobil",
     "Address": "Address",
-    "ZIP" :"Post code",
-    "City" :"City"
+    "ZIP" :"Postnummer",
+    "City" :"Stad"
   },
 "invoice" :{
-    "Company" :"Company",
-    "Profession" : "Profession",
-    "VAT" : "VAT",
-    "Country":"Country",
-    "Phone" :"Phone"
+    "Company" :"Företag",
+    "Profession" : "Yrke",
+    "VAT" : "MOMS",
+    "Country":"Land",
+    "Phone" :"Telefon"
 },
   "upsales": {
     "PurchaseBags": "Kjøp poser",
-    "SelectInsurance": "Select an insurance",
-    "Hungry": "Are you hungry?",
-    "Main": "Main",
-    "Dessert": "Dessert",
-    "BRB":"Blue Ribbon Bag Insurance!",
-    "Flex" :"Flexible Ticket",
-    "AirHelp" :"Flight Delay Compensation",
-    "FastTrack" : "Fast Track Priority Queue in Security Check",
+    "SelectInsurance": "Välj en försäkring",
+    "Hungry": "Är Du hungrig?",
+    "Main": "Huvudrätt",
+    "Dessert": "Efterrätt",
+    "BRB":"Blue Ribbon Bagageförsäkring",
+    "Flex" :"Flexibel biljett",
+    "AirHelp" :"Flygfördröjningskompensation",
+    "FastTrack" : "Snabbspårskvalitet i säkerhetskontroll",
     "Parking" : "Parking",
-    "Lounge":"Lounge Access"
+    "Lounge":"Tillgång till lounge"
   },
   "passport": {
-    "nationality": "Nationality",
-    "issue": "Issue Country",
-    "passportNo": "Passport No",
-    "expireDate": "Expiration date",
-    "dob": "Date of birth"
+    "nationality": "Nationalitet",
+    "issue": "Utgivningsland",
+    "passportNo": "Pass nr",
+    "expireDate": "Utgångsdatum",
+    "dob": "Födelsedatum"
   },
 "branded": {
   "Yes": "Ja",
   "No": "Nej"
 },
 "pricebox": {
-  "PriceAnalysis": "Price Analysis",
-  "TicketPrice": "Tickets price",
-  "UpsalePrices": "Upsale prices",
+  "PriceAnalysis": "Prisanalys",
+  "TicketPrice": "Biljettpris",
+  "UpsalePrices": "Uppsala priser",
   "Total": "Total",
-  "Fare": "Fare",
-  "Tax": "Tax",
+  "Fare": "Biljettpris",
+  "Tax": "Beskatta",
   "Type": "Type",
-  "Route": "Route",
-  "ChangeLang": "Change Language",
-  "ChangeCur": "Change Currency",
-  "Checkout" : "Checkout"
-}
+  "Route": "Rutt",
+  "ChangeLang": "Ändra språk",
+  "ChangeCur": "Ändra valuta",
+  "Checkout" : "Kassa"
 }
