upsales text constant

--- a/src/locales/no.json
+++ b/src/locales/no.json
@@ -54,6 +54,7 @@
 },
   "upsales": {
     "PurchaseBags": "Kjøp poser",
+    "upsales": "Kjøp salg på turen!",
     "SelectInsurance": "Velg Forsikring",
     "Hungry": "Är Du hungrig?",
     "Main": "Hovedrett",
