--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -54,6 +54,7 @@
 },
   "upsales": {
     "PurchaseBags": "Kjøp poser",
+    "upsales": "Köp försäljningsuppsättningar för din resa!",
     "SelectInsurance": "Välj en försäkring",
     "Hungry": "Är Du hungrig?",
     "Main": "Huvudrätt",
